Localization: changed FB into V10 symbol

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -12246,9 +12246,6 @@
   <data name="MAF_030" xml:space="preserve">
     <value>إدارة المحرك بالبدء المباشر باستخدام LSL + LSH (قادوس التحميل) + OK في اتجاه مجرى النهر</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>إدارة بدء التشغيل المباشر للمحرك باستخدام مفتاح حد الأمان والتأخير في الفصل للمواد المناسبة + محدد التمكين المحلي</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>إدارة بدء تشغيل المحرك المباشر بدون إشارات مساعدة ودورة إعادة التشغيل + الحد الأدنى للمستوى المحدد × برغي قاع خزان الفصل</value>
   </data>
@@ -12456,14 +12453,8 @@
   <data name="MAV_049" xml:space="preserve">
     <value>إدارة المحرك بواسطة العاكس مع تهوية الطاقة، والثرمستور، ومرحل أمان عمود السكون، والتحكم في التيار، ومفتاح الأمان - مولينو</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>إدارة المحرك باستخدام التحكم في العاكس مع السلامة FC + تجاوز BIMANUAL</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>إدارة المحرك باستخدام التحكم في العاكس مع تهوية المؤازرة ووحدة التحكم القابلة للفصل لشريط التخزين المؤقت</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>إدارة المحرك مع التحكم في العاكس للمضخة مع التحكم في التيار لإعادة تدوير المياه في دائرتين</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>إدارة المحرك الذي يتم التحكم فيه بواسطة العاكس للمضخة مع الحد الأدنى من المستوى والتحكم في التيار</value>
@@ -12486,12 +12477,6 @@
   <data name="MAV_059" xml:space="preserve">
     <value>إدارة المحرك باستخدام التحكم في العاكس مع التحكم الحالي في مضخة الحوض باستخدام قضيب ثلاثي المستويات</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>إدارة المحرك باستخدام التحكم في العاكس مع سحب FC، وفرامل المحرك، وأجهزة السلامة اللاحقة، وذراع رد الفعل وبوابة الوصول المحمية بمفتاح الأمان</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>إدارة المحرك مع التحكم في العاكس للمضخة مع الحد الأدنى من المستوى، والتحكم في مجرى النهر، والتحكم في التيار، وتشغيل/إيقاف التشغيل + التعديل لتصريف ديكانتر إلى المعالجة</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>إدارة محرك العاكس مع التحكم في التيار بسرعتين مخصصتين لمحرك الغسيل الفائق</value>
   </data>
@@ -12506,9 +12491,6 @@
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>إدارة المحرك الذي يتم التحكم فيه بواسطة العاكس لفلتر الكيس متعدد السرعات</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>إدارة المحرك باستخدام التحكم في العاكس DCE مع مفتاح الأمان</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>إدارة المحرك باستخدام التحكم في العاكس مع سلامة FC للمرشح الدقيق</value>
@@ -12891,15 +12873,6 @@
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>منطق فتح مفتاح الأمان لمطحنة واحدة باستخدام المياه من المضخة والمثقاب الموجود أسفل المصب</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>إدارة فرز رقائق BUHLER / SORTEX لمنطقة التخزين</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>إدارة فرز الرقائق UNISENSOR / POWERSORT لمنطقة التخزين</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>إدارة فرز رقائق SEA / CIMBRIA لمنطقة التخزين</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>إدارة المستوى التناظري لخلاط غسيل PET (الدفعة)</value>
   </data>
@@ -13061,5 +13034,20 @@
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>إدارة محرك واحد مع مضخة تحكم عاكسة مع التحكم في التيار لتصريف خزان التجميع (يتم تعديله على مستوى نقطة الضبط)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>إدارة بدء التشغيل المباشر للمحرك باستخدام مفتاح حد الأمان والتأخير في الفصل للمواد المناسبة + محدد التمكين المحلي</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>إدارة المحرك باستخدام التحكم في العاكس مع السلامة FC + تجاوز BIMANUAL</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>إدارة المحرك باستخدام التحكم في العاكس مع سحب FC، وفرامل المحرك، وأجهزة السلامة اللاحقة، وذراع رد الفعل وبوابة الوصول المحمية بمفتاح الأمان</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>إدارة المحرك مع التحكم في العاكس للمضخة مع الحد الأدنى من المستوى، والتحكم في مجرى النهر، والتحكم في التيار، وتشغيل/إيقاف التشغيل + التعديل لتصريف ديكانتر إلى المعالجة</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>إدارة المحرك باستخدام التحكم في العاكس DCE مع مفتاح الأمان</value>
   </data>
 </root>
