--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -12243,9 +12243,6 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   <data name="MAF_030" xml:space="preserve">
     <value>Direktstart-Motormanagement mit LSL + LSH (Ladetrichter) + OK nachgelagert</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Direktstart-Motormanagement mit Sicherheitsendschalter und verzögerter Abschaltung bei Material OK + lokaler Aktivierungswahlschalter</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Direktstart-Motormanagement ohne Hilfssignale und Ein-/Aus-Neustartzyklus + Mindestfüllstand-spezifische x Abscheider-Bodenschraube</value>
   </data>
@@ -12453,14 +12450,8 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   <data name="MAV_049" xml:space="preserve">
     <value>Umrichtergesteuerte Motorsteuerung mit Leistungsbelüftung, Thermistor, Stillstands-Wellensicherheitsrelais, Stromregelung und Sicherheitsschlüssel – MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Motormanagement mit Wechselrichtersteuerung und Sicherheits-FC + BIMANUAL-Bypass</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Motormanagement mit Umrichtersteuerung, Servolüftung und Abreiß-FC für Pufferband</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Motormanagement mit Frequenzumrichtersteuerung für eine Pumpe mit Stromregelung zur Wasserumwälzung in zwei Kreisläufen</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Wechselrichtergesteuerte Motorsteuerung für Pumpen mit Mindestfüllstand- und Stromregelung</value>
@@ -12483,12 +12474,6 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   <data name="MAV_059" xml:space="preserve">
     <value>Motormanagement mit Frequenzumrichtersteuerung und Stromregelung der Tauchpumpe mit dreistufiger Stange</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Motormanagement mit Umrichtersteuerung mit Pull FC, Motorbremse, nachgeschalteten Sicherheitseinrichtungen, Reaktionsarm und durch einen Sicherheitsschlüssel gesichertem Zugangstor</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Motormanagement mit Frequenzumrichtersteuerung für die Pumpe mit Mindestfüllstand, nachgeschalteter OK-Funktion und Stromregelung, EIN/AUS + Modulation für die Dekanterentleerung zur Aufbereitungsanlage</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Inverter-Motormanagement mit 2-stufiger Stromregelung speziell für Superwash-Rührwerk</value>
   </data>
@@ -12503,9 +12488,6 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Wechselrichtergesteuerte Motorsteuerung für mehrstufige Schlauchfilter</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Motormanagement mit DCE-Wechselrichtersteuerung und Sicherheitsschlüssel</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Motormanagement mit Wechselrichtersteuerung und Sicherheits-FC für Mikrofilter</value>
@@ -12888,15 +12870,6 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logik zum Entriegeln des Sicherheitsschlüssels für eine einzelne Mühle mit Wasser aus der Pumpe und der nachgelagerten Förderschnecke</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX Flockensortieranlage – Lagerbereichsmanagement</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Flockensortieranlage für Lagerbereiche</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA Flockensortieranlage für Lagerbereiche</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Analoge Füllstandsregelung des PET-Waschmischers (Charge)</value>
   </data>
@@ -13058,5 +13031,20 @@ Hinweis: Bei Aktivierung dieses Modus kann die vorgelagerte Produktion unterbroc
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Steuerung einer Motorpumpe mit Frequenzumrichter und Stromregelung zur Entleerung des Sammelbehälters (moduliert auf den Sollwert)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Direktstart-Motormanagement mit Sicherheitsendschalter und verzögerter Abschaltung bei Material OK + lokaler Aktivierungswahlschalter</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Motormanagement mit Wechselrichtersteuerung und Sicherheits-FC + BIMANUAL-Bypass</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Motormanagement mit Umrichtersteuerung mit Pull FC, Motorbremse, nachgeschalteten Sicherheitseinrichtungen, Reaktionsarm und durch einen Sicherheitsschlüssel gesichertem Zugangstor</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Motormanagement mit Frequenzumrichtersteuerung für die Pumpe mit Mindestfüllstand, nachgeschalteter OK-Funktion und Stromregelung, EIN/AUS + Modulation für die Dekanterentleerung zur Aufbereitungsanlage</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Motormanagement mit DCE-Wechselrichtersteuerung und Sicherheitsschlüssel</value>
   </data>
 </root>
