--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -12240,9 +12240,6 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   <data name="MAF_030" xml:space="preserve">
     <value>Gestión de arranque directo del motor con LSL + LSH (tolva de carga) + OK aguas abajo</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Gestión de arranque directo del motor con interruptor de límite de seguridad y retardo en la desconexión para material OK + selector de habilitación local</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Gestión del motor de arranque directo sin señales auxiliares ni ciclo de reinicio ON-OFF + Tornillo inferior del depósito separador de nivel mínimo específico</value>
   </data>
@@ -12450,14 +12447,8 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   <data name="MAV_049" xml:space="preserve">
     <value>Gestión de motores controlada por inversor con ventilación forzada, termistor, relé de seguridad de eje en reposo, control de corriente y llave de seguridad - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Gestión de motores con control de inversor con bypass de seguridad FC + BIMANUAL</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Gestión del motor con control de inversor, servoventilación y sistema de corte por transferencia de película para cinta amortiguadora.</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Gestión del motor con control de inversor para bomba con control de corriente para recirculación de agua en dos circuitos.</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Gestión de motor controlada por inversor para bomba con control de nivel y corriente mínimos</value>
@@ -12480,12 +12471,6 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   <data name="MAV_059" xml:space="preserve">
     <value>Gestión del motor con control de inversor y control de corriente de la bomba de sumidero con varilla de tres niveles</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Gestión del motor con control de inversor con controlador de flujo de tracción, freno de motor, dispositivos de seguridad posteriores, brazo de reacción y puerta de acceso protegida por llave de seguridad.</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Gestión del motor con control de inversor para la bomba con control de nivel mínimo, control de corriente y de flujo descendente, encendido/apagado y modulación para la descarga del decantador al tratamiento.</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Gestión del motor inversor con control de corriente de 2 velocidades específico para agitador superwash</value>
   </data>
@@ -12500,9 +12485,6 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Gestión del motor mediante inversor para filtro de mangas de varias velocidades</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Gestión de motores con control de inversor DCE con llave de seguridad</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Gestión de motores con control de inversor y FC de seguridad para microfiltro</value>
@@ -12885,15 +12867,6 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Lógica para desbloquear la llave de seguridad de un molino simple con agua proveniente de la bomba y del sinfín aguas abajo.</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX Gestión de clasificadores de escamas para el área de almacenamiento</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Gestión de clasificadores de copos para áreas de almacenamiento</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA Gestión de clasificadores de escamas para el área de almacenamiento</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Gestión de nivel analógico de la lavadora mezcladora de PET (por lotes)</value>
   </data>
@@ -13055,5 +13028,20 @@ Nota: Si se activa este modo, la producción previa podría suspenderse.</value>
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Gestión de 1 motor con bomba de control inverter con control de corriente para el vaciado del depósito de recogida (modulada al nivel de consigna).</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Gestión de arranque directo del motor con interruptor de límite de seguridad y retardo en la desconexión para material OK + selector de habilitación local</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Gestión de motores con control de inversor con bypass de seguridad FC + BIMANUAL</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Gestión del motor con control de inversor con controlador de flujo de tracción, freno de motor, dispositivos de seguridad posteriores, brazo de reacción y puerta de acceso protegida por llave de seguridad.</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Gestión del motor con control de inversor para la bomba con control de nivel mínimo, control de corriente y de flujo descendente, encendido/apagado y modulación para la descarga del decantador al tratamiento.</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Gestión de motores con control de inversor DCE con llave de seguridad</value>
   </data>
 </root>
