--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -12241,9 +12241,6 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   <data name="MAF_030" xml:space="preserve">
     <value>Gestion directe du moteur à démarrage avec LSL + LSH (trémie de chargement) + OK en aval</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Gestion du moteur à démarrage direct avec interrupteur de fin de course de sécurité et temporisation de déconnexion pour matériau OK + sélecteur d'activation locale</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Gestion moteur à démarrage direct sans signaux auxiliaires ni cycle de redémarrage marche/arrêt + niveau minimum spécifique x vis de fond du réservoir de séparation</value>
   </data>
@@ -12451,14 +12448,8 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   <data name="MAV_049" xml:space="preserve">
     <value>Gestion moteur par variateur de fréquence avec ventilation assistée, thermistance, relais de sécurité d'arbre à l'arrêt, contrôle de courant et clé de sécurité - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Gestion moteur avec variateur de fréquence, sécurité FC et bypass bimanuel</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Gestion du moteur avec commande par variateur de fréquence, ventilation servo et carte de transfert détachable pour bande tampon</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Gestion du moteur par variateur de fréquence pour pompe avec régulation de courant pour recirculation d'eau dans deux circuits</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Gestion du moteur par variateur de fréquence pour pompe avec contrôle du niveau et du courant minimum</value>
@@ -12481,12 +12472,6 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   <data name="MAV_059" xml:space="preserve">
     <value>Gestion du moteur avec commande par variateur de fréquence et contrôle du courant de la pompe de puisard à trois niveaux</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Gestion moteur avec variateur de fréquence, commande par faisceau d'alimentation, frein moteur, dispositifs de sécurité aval, bras de réaction et portail d'accès protégé par clé de sécurité.</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Gestion du moteur par variateur de fréquence pour pompe avec niveau minimum, contrôle de niveau aval et de courant, marche/arrêt + modulation pour le refoulement du décanteur vers le traitement</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Gestion du moteur Inverter avec contrôle du courant à 2 vitesses spécifique pour le superwash STIRRER</value>
   </data>
@@ -12501,9 +12486,6 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Gestion du moteur par variateur de fréquence pour filtre à sac multi-vitesses</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Gestion moteur avec variateur de fréquence DCE et clé de sécurité</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Gestion moteur avec variateur de fréquence et contrôleur de sécurité pour microfiltre</value>
@@ -12886,15 +12868,6 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logique de déverrouillage de la clé de sécurité d'un moulin unique alimenté en eau par la pompe et la vis sans fin aval</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>Gestion des trieurs de flocons BUHLER / SORTEX pour zone de stockage</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>Gestion du trieur de flocons UNISENSOR / POWERSORT pour zone de stockage</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>Gestion du trieur à flocons SEA / CIMBRIA pour la zone de stockage</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Gestion de niveau analogique du mélangeur de lavage PET (lot)</value>
   </data>
@@ -13056,5 +13029,20 @@ Remarque : Si ce mode est activé, la production en amont peut être suspendue.
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Gestion d'un moteur avec pompe à commande par variateur de fréquence et régulation du courant pour la vidange du réservoir de collecte (modulée au niveau de consigne)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Gestion du moteur à démarrage direct avec interrupteur de fin de course de sécurité et temporisation de déconnexion pour matériau OK + sélecteur d'activation locale</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Gestion moteur avec variateur de fréquence, sécurité FC et bypass bimanuel</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Gestion moteur avec variateur de fréquence, commande par faisceau d'alimentation, frein moteur, dispositifs de sécurité aval, bras de réaction et portail d'accès protégé par clé de sécurité.</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Gestion du moteur par variateur de fréquence pour pompe avec niveau minimum, contrôle de niveau aval et de courant, marche/arrêt + modulation pour le refoulement du décanteur vers le traitement</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Gestion moteur avec variateur de fréquence DCE et clé de sécurité</value>
   </data>
 </root>
