--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -12240,9 +12240,6 @@
   <data name="MAF_030" xml:space="preserve">
     <value>ניהול מנוע התנעה ישירה עם LSL + LSH (מיכל טעינה) + אישור במורד הזרם</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>ניהול מנוע הפעלה ישירה עם מתג גבול בטיחות ועיכוב ניתוק עבור אישור חומר + בורר אפשור מקומי</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>ניהול מנוע התנעה ישירה ללא אותות עזר ומחזור הפעלה מחדש ON-OFF + בורג תחתון מיכל הפרדה ספציפי למפלס מינימלי</value>
   </data>
@@ -12450,14 +12447,8 @@
   <data name="MAV_049" xml:space="preserve">
     <value>ניהול מנוע מבוקר-ממיר עם אוורור כוח, תרמיסטור, ממסר בטיחות ציר קיפאון, בקרת זרם ומפתח בטיחות - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>ניהול מנוע עם בקרת ממיר עם בקרת בטיחות FC + מעקף דו-ידני</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>ניהול מנוע עם בקרת אינוורטר עם אוורור סרוו ועם בקרת FC נקרעת עבור סרט חיץ</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>ניהול מנוע עם בקרת אינוורטר למשאבה עם בקרת זרם למחזור מים בשני מעגלים</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>ניהול מנוע מבוקר ממיר למשאבה עם בקרת מפלס מינימלי וזרם</value>
@@ -12480,12 +12471,6 @@
   <data name="MAV_059" xml:space="preserve">
     <value>ניהול מנוע עם בקרת אינוורטר עם בקרת זרם של משאבת ניקוז עם מוט תלת-מפלסי</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>ניהול מנוע עם בקרת ממיר עם משיכה FC, בלימת מנוע, התקני בטיחות במורד הזרם, זרוע תגובה ושער גישה המוגן על ידי מפתח בטיחות</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>ניהול מנוע עם בקרת אינוורטר למשאבה עם מפלס מינימלי, תקינות במורד הזרם ובקרת זרם, הפעלה/כיבוי + אפנון עבור פריקה מהמתקן לטיפול</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>ניהול מנוע אינוורטר עם בקרת זרם דו-מהירויות ספציפית ל-superwash.</value>
   </data>
@@ -12500,9 +12485,6 @@
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>ניהול מנוע מבוקר-ממיר עבור מסנן שקיות רב-מהירויות</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>ניהול מנוע עם בקרת ממיר DCE עם מפתח בטיחות</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>ניהול מנוע עם בקרת ממיר עם FC בטיחותי עבור מיקרו-פילטר</value>
@@ -12885,15 +12867,6 @@
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>היגיון לפתיחת מפתח הבטיחות עבור טחנה בודדת עם מים מהמשאבה ומקדחת הזרם</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>ניהול מיון פתיתים של BUHLER / SORTEX לאזור אחסון</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>ניהול מיון פתיתים UNISENSOR / POWERSORT לאזור אחסון</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>ניהול מיון פתיתי SEA / CIMBRIA לאזור אחסון</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>ניהול מפלס אנלוגי של מערבל שטיפת PET (אצווה)</value>
   </data>
@@ -13055,5 +13028,20 @@
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>ניהול מנוע אחד עם משאבה בקרת אינוורטר עם בקרת זרם לניקוז מיכל האיסוף (מווסת על פי רמת הערך הקבועה)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>ניהול מנוע הפעלה ישירה עם מתג גבול בטיחות ועיכוב ניתוק עבור אישור חומר + בורר אפשור מקומי</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>ניהול מנוע עם בקרת ממיר עם בקרת בטיחות FC + מעקף דו-ידני</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>ניהול מנוע עם בקרת ממיר עם משיכה FC, בלימת מנוע, התקני בטיחות במורד הזרם, זרוע תגובה ושער גישה המוגן על ידי מפתח בטיחות</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>ניהול מנוע עם בקרת אינוורטר למשאבה עם מפלס מינימלי, תקינות במורד הזרם ובקרת זרם, הפעלה/כיבוי + אפנון עבור פריקה מהמתקן לטיפול</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>ניהול מנוע עם בקרת ממיר DCE עם מפתח בטיחות</value>
   </data>
 </root>
