--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -12240,9 +12240,6 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   <data name="MAF_030" xml:space="preserve">
     <value>Gestione del motore ad avviamento diretto con LSL + LSH (tramoggia di carico) + OK a valle</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Gestione del motore ad avviamento diretto con finecorsa di sicurezza e ritardo di disconnessione per materiale OK + selettore di abilitazione locale</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Gestione del motore ad avviamento diretto senza segnali ausiliari e ciclo di riavvio ON-OFF + livello minimo specifico x vite inferiore del serbatoio di separazione</value>
   </data>
@@ -12450,14 +12447,8 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   <data name="MAV_049" xml:space="preserve">
     <value>Gestione del motore controllata da inverter con ventilazione forzata, termistore, relè di sicurezza per albero fermo, controllo della corrente e chiave di sicurezza - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Gestione motore con controllo inverter con FC di sicurezza + bypass BIMANUALE</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Gestione motore con controllo inverter con servoventilazione e con FC a strappo per nastro tampone</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Gestione motore con controllo inverter per pompa con controllo di corrente per ricircolo acqua in due circuiti</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Gestione del motore controllata da inverter per pompa con controllo minimo di livello e corrente</value>
@@ -12480,12 +12471,6 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   <data name="MAV_059" xml:space="preserve">
     <value>Gestione del motore con controllo inverter con controllo della corrente della pompa di sentina con asta a tre livelli</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Gestione motore con controllo inverter con Pull FC, freno motore, dispositivi di sicurezza a valle, braccio di reazione e cancello di accesso protetto da chiave di sicurezza</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Gestione motore con controllo inverter per pompa con livello minimo, OK a valle e controllo corrente, ON/OFF + modulazione per scarico DECANTER al trattamento</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Gestione motore inverter con controllo corrente a 2 velocità specifico per superwash STIRRER</value>
   </data>
@@ -12500,9 +12485,6 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Gestione del motore controllata da inverter per filtro a sacco multivelocità</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Gestione motore con controllo inverter DCE con chiave di sicurezza</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Gestione motore con controllo inverter con FC di sicurezza per microfiltro</value>
@@ -12885,15 +12867,6 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logica per sbloccare la chiave di sicurezza per un singolo mulino con acqua dalla POMPA e dalla coclea a valle</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>Gestione della smistatrice di fiocchi BUHLER / SORTEX per l'area di stoccaggio</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Gestione della smistatrice di fiocchi per l'area di stoccaggio</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>Gestione della smistatrice di fiocchi SEA / CIMBRIA per l'area di stoccaggio</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Gestione del livello analogico del miscelatore di lavaggio PET (batch)</value>
   </data>
@@ -13055,5 +13028,20 @@ Nota: se questa modalità è attivata, la produzione a monte potrebbe essere sos
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Gestione di 1 motore con pompa di controllo inverter con controllo di corrente per lo svuotamento della vasca di raccolta (modulata sul livello di setpoint)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Gestione del motore ad avviamento diretto con finecorsa di sicurezza e ritardo di disconnessione per materiale OK + selettore di abilitazione locale</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Gestione motore con controllo inverter con FC di sicurezza + bypass BIMANUALE</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Gestione motore con controllo inverter con Pull FC, freno motore, dispositivi di sicurezza a valle, braccio di reazione e cancello di accesso protetto da chiave di sicurezza</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Gestione motore con controllo inverter per pompa con livello minimo, OK a valle e controllo corrente, ON/OFF + modulazione per scarico DECANTER al trattamento</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Gestione motore con controllo inverter DCE con chiave di sicurezza</value>
   </data>
 </root>
