--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -12240,9 +12240,6 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   <data name="MAF_030" xml:space="preserve">
     <value>Direct Start Engine Management met LSL + LSH (laadtrechter) + OK stroomafwaarts</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Direct Start Motor Management met Veiligheidseindschakelaar en Uitschakelvertraging voor Materiaal OK + Lokale Activeringsselector</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Direct Start Motor Management Zonder Hulpsignalen en AAN-UIT Herstartcyclus + Minimum Niveau Specifiek x Scheidingstank Bodemschroef</value>
   </data>
@@ -12450,14 +12447,8 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   <data name="MAV_049" xml:space="preserve">
     <value>Omvormergestuurd motorbeheer met vermogensventilatie, thermistor, stilstandsas-veiligheidsrelais, stroomregeling en veiligheidssleutel - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Motorbeheer met inverterregeling met veiligheids-FC + BIMANUAL Bypass</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Motormanagement met inverterregeling met servoventilatie en met afscheurbare FC voor bufferband</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Motorbeheer met inverterregeling voor pomp met stroomregeling voor waterrecirculatie in twee circuits</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Omvormergestuurd motorbeheer voor pomp met minimumniveau- en stroomregeling</value>
@@ -12480,12 +12471,6 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   <data name="MAV_059" xml:space="preserve">
     <value>Motorbeheer met inverterregeling met stroomregeling van dompelpomp met drie-niveaustang</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Motormanagement met inverterbesturing met trek-FC, motorrem, downstream veiligheidsvoorzieningen, reactiearm en toegangspoort beveiligd met veiligheidssleutel</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Motorbeheer met inverterregeling voor pomp met minimaal niveau, downstream OK en stroomregeling, AAN/UIT + modulatie voor DECANTER-afvoer naar behandeling</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Inverter Motor Management met 2-snelheidsstroomregeling specifiek voor superwash ROERDER</value>
   </data>
@@ -12500,9 +12485,6 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Invertergestuurd motorbeheer voor meersnelheden zakfilter</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Motormanagement met DCE-omvormerbesturing met veiligheidssleutel</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Motormanagement met inverterregeling met veiligheids-FC voor microfilter</value>
@@ -12885,15 +12867,6 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logica voor het ontgrendelen van de veiligheidssleutel voor een enkele molen met water uit de POMP en de stroomafwaartse vijzel</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX Flake Sorter Management voor opslagruimte</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Flake Sorter Management voor opslagruimte</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA Flake Sorter Management voor opslagruimte</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Analoog niveaubeheer van PET-wasmixer (batch)</value>
   </data>
@@ -13055,5 +13028,20 @@ Opmerking: Als deze modus is geactiveerd, kan de upstream-productie worden opges
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Beheer van 1 motor met invertergestuurde pomp met stroomregeling voor het leegpompen van de opvangtank (gemoduleerd op instelniveau)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Direct Start Motor Management met Veiligheidseindschakelaar en Uitschakelvertraging voor Materiaal OK + Lokale Activeringsselector</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Motorbeheer met inverterregeling met veiligheids-FC + BIMANUAL Bypass</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Motormanagement met inverterbesturing met trek-FC, motorrem, downstream veiligheidsvoorzieningen, reactiearm en toegangspoort beveiligd met veiligheidssleutel</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Motorbeheer met inverterregeling voor pomp met minimaal niveau, downstream OK en stroomregeling, AAN/UIT + modulatie voor DECANTER-afvoer naar behandeling</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Motormanagement met DCE-omvormerbesturing met veiligheidssleutel</value>
   </data>
 </root>
