--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -12240,9 +12240,6 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   <data name="MAF_030" xml:space="preserve">
     <value>Gerenciamento de motor de partida direta com LSL + LSH (tremonha de carregamento) + OK a jusante</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Gerenciamento de partida direta do motor com interruptor de limite de segurança e retardo na desconexão para material OK + seletor de ativação local</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Gerenciamento de partida direta do motor sem sinais auxiliares e ciclo de reinicialização ON-OFF + nível mínimo específico x parafuso de fundo do tanque de separação</value>
   </data>
@@ -12450,14 +12447,8 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   <data name="MAV_049" xml:space="preserve">
     <value>Gerenciamento de motor controlado por inversor com ventilação forçada, termistor, relé de segurança de eixo em parada, controle de corrente e chave de segurança - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Gerenciamento de motor com controle de inversor com segurança FC + bypass bimanual</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Gerenciamento de motor com controle inversor, servoventilação e sistema de corte de fita de proteção.</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Gerenciamento de motor com controle por inversor para bomba com controle de corrente para recirculação de água em dois circuitos.</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Gerenciamento de motor controlado por inversor para bomba com controle de nível mínimo e corrente.</value>
@@ -12480,12 +12471,6 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   <data name="MAV_059" xml:space="preserve">
     <value>Gerenciamento de motor com controle de inversor e controle de corrente para bomba de esgoto com haste de três níveis</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Gerenciamento do motor com controle por inversor com controle de frequência de acionamento (Pull FC), freio do motor, dispositivos de segurança a jusante, braço de reação e portão de acesso protegido por chave de segurança.</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Gerenciamento de motor com controle inversor para bomba com nível mínimo, OK a jusante e controle de corrente, liga/desliga + modulação para descarga do decantador para tratamento.</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Gerenciamento de motor inversor com controle de corrente de 2 velocidades específico para agitador superwash</value>
   </data>
@@ -12500,9 +12485,6 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Gerenciamento de motor controlado por inversor para filtro de mangas com múltiplas velocidades</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Gerenciamento de motor com controle de inversor DCE com chave de segurança</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Gerenciamento de motor com controle de inversor e FC de segurança para microfiltro</value>
@@ -12885,15 +12867,6 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Lógica para destravar a chave de segurança de um moinho simples com água da bomba e da rosca sem-fim a jusante.</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>Gerenciamento de classificadores de flocos BUHLER / SORTEX para área de armazenamento</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>Sistema de classificação de flocos UNISENSOR/POWERSORT para gerenciamento em áreas de armazenamento.</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>Gerenciamento de classificadores de flocos SEA/CIMBRIA para área de armazenamento</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Gestão analógica do nível do misturador de lavagem PET (lote)</value>
   </data>
@@ -13055,5 +13028,20 @@ Observação: Se este modo estiver ativado, a produção a montante poderá ser 
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Gerenciamento de 1 motor com bomba de controle inversora com controle de corrente para drenagem do tanque de coleta (modulada no nível de ponto de ajuste).</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Gerenciamento de partida direta do motor com interruptor de limite de segurança e retardo na desconexão para material OK + seletor de ativação local</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Gerenciamento de motor com controle de inversor com segurança FC + bypass bimanual</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Gerenciamento do motor com controle por inversor com controle de frequência de acionamento (Pull FC), freio do motor, dispositivos de segurança a jusante, braço de reação e portão de acesso protegido por chave de segurança.</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Gerenciamento de motor com controle inversor para bomba com nível mínimo, OK a jusante e controle de corrente, liga/desliga + modulação para descarga do decantador para tratamento.</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Gerenciamento de motor com controle de inversor DCE com chave de segurança</value>
   </data>
 </root>
