--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -12240,9 +12240,6 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   <data name="MAF_030" xml:space="preserve">
     <value>Managementul motorului cu pornire directă cu LSL + LSH (buncăr de încărcare) + OK în aval</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Gestionarea motorului cu pornire directă cu comutator de limită de siguranță și întârziere la deconectare pentru material OK + selector de activare locală</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Gestionarea motorului cu pornire directă fără semnale auxiliare și ciclu de repornire ON-OFF + Nivel minim specific x șurub de fund al rezervorului de separare</value>
   </data>
@@ -12450,14 +12447,8 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   <data name="MAV_049" xml:space="preserve">
     <value>Managementul motorului controlat prin invertor cu ventilație electrică, termistor, releu de siguranță la arbore în stare de repaus, control al curentului și cheie de siguranță - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Managementul motorului cu control prin invertor cu FC de siguranță + bypass BIMANUAL</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Managementul motorului cu control prin invertor, cu servoventilație și cu sistem de închidere rapidă pentru bandă tampon</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Managementul motorului cu control invertor pentru pompă cu control al curentului pentru recircularea apei în două circuite</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Managementul motorului controlat prin invertor pentru pompă cu control al nivelului minim și al curentului</value>
@@ -12480,12 +12471,6 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   <data name="MAV_059" xml:space="preserve">
     <value>Managementul motorului cu control prin invertor și controlul curentului pompei de submersibilitate cu tijă pe trei niveluri</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Management motor cu control invertor cu tracțiune FC, frână motor, dispozitive de siguranță în aval, braț de reacție și poartă de acces protejate cu cheie de siguranță</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Managementul motorului cu control invertor pentru pompă cu nivel minim, OK în aval și control al curentului, PORNIT/OPRIT + Modulație pentru descărcarea DECANTORULUI către tratament</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Managementul motorului cu invertor cu control al curentului în 2 viteze specific pentru superwash STIRRER</value>
   </data>
@@ -12500,9 +12485,6 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Managementul motorului controlat prin invertor pentru filtrul cu sac cu mai multe viteze</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Managementul motorului cu control al invertorului DCE cu cheie de siguranță</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Managementul motorului cu control prin invertor și controler de siguranță FC pentru microfiltru</value>
@@ -12885,15 +12867,6 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logica pentru deblocarea cheii de siguranță pentru o singură moară cu apă de la POMPĂ și spirală din aval</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>Managementul sortatorului de fulgi BUHLER / SORTEX pentru zona de depozitare</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>Managementul sortatorului de fulgi UNISENSOR / POWERSORT pentru zona de depozitare</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>Managementul sortatorului de fulgi SEA / CIMBRIA pentru zona de depozitare</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Managementul nivelului analogic al mixerului de spălare PET (loturi)</value>
   </data>
@@ -13055,5 +13028,20 @@ Notă: Dacă acest mod este activat, producția din amonte poate fi suspendată.
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Gestionarea a 1 motor cu pompă de control cu ​​invertor și control al curentului pentru golirea rezervorului de colectare (modulată la nivelul valorii de referință)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Gestionarea motorului cu pornire directă cu comutator de limită de siguranță și întârziere la deconectare pentru material OK + selector de activare locală</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Managementul motorului cu control prin invertor cu FC de siguranță + bypass BIMANUAL</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Management motor cu control invertor cu tracțiune FC, frână motor, dispozitive de siguranță în aval, braț de reacție și poartă de acces protejate cu cheie de siguranță</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Managementul motorului cu control invertor pentru pompă cu nivel minim, OK în aval și control al curentului, PORNIT/OPRIT + Modulație pentru descărcarea DECANTORULUI către tratament</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Managementul motorului cu control al invertorului DCE cu cheie de siguranță</value>
   </data>
 </root>
