--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -12240,9 +12240,6 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   <data name="MAF_030" xml:space="preserve">
     <value>Upravljanje motorja z neposrednim zagonom z LSL + LSH (polnilni lijak) + OK za nakladanjem</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Upravljanje motorja z neposrednim zagonom z varnostnim končnim stikalom in zakasnitvijo izklopa za material v redu + izbirnik lokalnega omogočanja</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Upravljanje motorja z neposrednim zagonom brez pomožnih signalov in cikla ponovnega zagona VKLOP-IZKLOP + minimalni nivo, specifičen za ločevalni vijak dna rezervoarja</value>
   </data>
@@ -12450,14 +12447,8 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   <data name="MAV_049" xml:space="preserve">
     <value>Invertersko krmiljeno upravljanje motorja z močnostnim prezračevanjem, termistorjem, varnostnim relejem za mirujočo gred, nadzorom toka in varnostnim ključem - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Upravljanje motorja z inverterskim krmiljenjem z varnostnim FC + dvoročnim obvodom</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Upravljanje motorja z inverterskim krmiljenjem s servo prezračevanjem in s trgalnim FC za vmesni trak</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Upravljanje motorja z inverterskim krmiljenjem za črpalko s tokovnim krmiljenjem za recirkulacijo vode v dveh tokokrogih</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>Invertersko krmiljeno upravljanje motorja za črpalko z nadzorom minimalnega nivoja in toka</value>
@@ -12480,12 +12471,6 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   <data name="MAV_059" xml:space="preserve">
     <value>Upravljanje motorja z inverterskim krmiljenjem s tokovnim krmiljenjem črpalke za odvodnjavanje s tristopenjsko palico</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Upravljanje motorja z inverterskim krmiljenjem s pulzno krmilno enoto, motorno zavoro, varnostnimi napravami za napeljavo, reakcijsko roko in dostopnimi vrati, zaščitenimi z varnostnim ključem</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Upravljanje motorja z inverterskim krmiljenjem za črpalko z minimalnim nivojem, nadzorom pretoka v redu in toka, VKLOP/IZKLOP + modulacija za izpust DECANTERJA v čistilno napravo</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Invertersko upravljanje motorja z 2-stopenjskim nadzorom toka, posebej za mešalnik Superwash</value>
   </data>
@@ -12500,9 +12485,6 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Invertersko krmiljeno upravljanje motorja za večhitrostni vrečasti filter</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Upravljanje motorja z inverterskim krmiljenjem DCE z varnostnim ključem</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>Upravljanje motorja z inverterskim krmiljenjem z varnostnim FC za mikrofilter</value>
@@ -12885,15 +12867,6 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>Logika za odklepanje varnostnega ključa za en mlin z vodo iz ČRPALKE in spodnjega polža</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX Upravljanje sortirnika kosmičev za skladiščni prostor</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Upravljanje sortirnika kosmičev za skladiščni prostor</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA Upravljanje sortirnika kosmičev za skladiščni prostor</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Analogno upravljanje nivoja mešalnika za pranje PET (šaržno)</value>
   </data>
@@ -13055,5 +13028,20 @@ Opomba: če je ta način aktiviran, je proizvodnja na zgornjem delu verige lahko
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Upravljanje 1 motorja z invertersko krmiljeno črpalko s tokovnim nadzorom za praznjenje zbirnega rezervoarja (modulira se na nastavljeni vrednosti)</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Upravljanje motorja z neposrednim zagonom z varnostnim končnim stikalom in zakasnitvijo izklopa za material v redu + izbirnik lokalnega omogočanja</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Upravljanje motorja z inverterskim krmiljenjem z varnostnim FC + dvoročnim obvodom</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Upravljanje motorja z inverterskim krmiljenjem s pulzno krmilno enoto, motorno zavoro, varnostnimi napravami za napeljavo, reakcijsko roko in dostopnimi vrati, zaščitenimi z varnostnim ključem</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Upravljanje motorja z inverterskim krmiljenjem za črpalko z minimalnim nivojem, nadzorom pretoka v redu in toka, VKLOP/IZKLOP + modulacija za izpust DECANTERJA v čistilno napravo</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Upravljanje motorja z inverterskim krmiljenjem DCE z varnostnim ključem</value>
   </data>
 </root>
