--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -12240,9 +12240,6 @@
   <data name="MAF_030" xml:space="preserve">
     <value>直接启动发动机管理，带 LSL + LSH（装载料斗）+ OK 下游</value>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>带安全限位开关和物料正常断开延时功能的直接启动电机管理 + 本地启用选择器</value>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>无需辅助信号和开/关重启循环的直接启动发动机管理 + 最低液位特定 x 分离罐底螺钉</value>
   </data>
@@ -12450,14 +12447,8 @@
   <data name="MAV_049" xml:space="preserve">
     <value>变频控制电机管理系统，带动力通风、热敏电阻、轴静止安全继电器、电流控制和安全钥匙 - MULINO</value>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>电机管理采用变频控制，带安全功能和双向旁路</value>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>采用变频器控制、伺服通风和可撕式缓冲胶带的电机管理</value>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>采用变频器控制的电机管理，用于带电流控制的水泵，实现双回路水循环</value>
   </data>
   <data name="MAV_053" xml:space="preserve">
     <value>变频控制电机管理，用于带最小液位和电流控制的水泵</value>
@@ -12480,12 +12471,6 @@
   <data name="MAV_059" xml:space="preserve">
     <value>采用变频器控制和电流控制的三级杆式水泵电机管理</value>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>电机管理系统采用变频器控制，配备拉式快速换向器、电机刹车、下游安全装置、反作用臂和由安全钥匙保护的门禁系统。</value>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>采用变频器控制的电机管理，用于控制泵的最低液位、下游运行状况和电流，以及用于滗析器排放到处理系统的开关和调节功能。</value>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>变频电机管理，具备双速电流控制，专为超级洗涤搅拌器设计</value>
   </data>
@@ -12500,9 +12485,6 @@
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>用于多速袋式过滤器的变频控制电机管理</value>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>采用带安全钥匙的DCE变频器控制电机管理系统</value>
   </data>
   <data name="MAV_075" xml:space="preserve">
     <value>采用变频控制的电机管理，带安全FC，适用于微型滤波器</value>
@@ -12885,15 +12867,6 @@
   <data name="CYC_MAINT_054" xml:space="preserve">
     <value>利用水泵和下游螺旋输送机的水来解锁单台磨机的安全钥匙的逻辑</value>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX 片状分选机存储区管理</value>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT 片状分选机存储区管理</value>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA 存储区薄片分选机管理</value>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>PET清洗搅拌机（批次）的模拟量级管理</value>
   </data>
@@ -13055,5 +13028,20 @@
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>管理一台带变频控制的电机泵，该泵具有电流控制功能，用于排空集水箱（根据设定点水平进行调节）。</value>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>带安全限位开关和物料正常断开延时功能的直接启动电机管理 + 本地启用选择器</value>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>电机管理采用变频控制，带安全功能和双向旁路</value>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>电机管理系统采用变频器控制，配备拉式快速换向器、电机刹车、下游安全装置、反作用臂和由安全钥匙保护的门禁系统。</value>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>采用变频器控制的电机管理，用于控制泵的最低液位、下游运行状况和电流，以及用于滗析器排放到处理系统的开关和调节功能。</value>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>采用带安全钥匙的DCE变频器控制电机管理系统</value>
   </data>
 </root>
