--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -12710,10 +12710,6 @@ Note: If this mode is activated, upstream production may be suspended.</value>
     <value>Direct Start Engine Management with LSL + LSH (loading hopper) + OK downstream</value>
     <comment>FC_DESCR</comment>
   </data>
-  <data name="FC331" xml:space="preserve">
-    <value>Direct Start Motor Management with Safety Limit Switch and Delay in Disconnection for Material OK + Local Enable Selector</value>
-    <comment>FC_DESCR</comment>
-  </data>
   <data name="MAF_034" xml:space="preserve">
     <value>Direct Start Engine Management Without Auxiliary Signals and ON-OFF Restart cycle + Minimum Level Specific x Separatin Tank Bottom Screw</value>
     <comment>FC_DESCR</comment>
@@ -12990,16 +12986,8 @@ Note: If this mode is activated, upstream production may be suspended.</value>
     <value>Inverter-Controlled Motor Management with Power Ventilation, Thermistor, Standstill Shaft Safety Relay, Current Control, and Safety Key - MULINO</value>
     <comment>FC_DESCR</comment>
   </data>
-  <data name="FC450" xml:space="preserve">
-    <value>Motor Management with Inverter Control with Safety FC + BIMANUAL Bypass</value>
-    <comment>FC_DESCR</comment>
-  </data>
   <data name="MAV_051" xml:space="preserve">
     <value>Motor Management with Inverter Control with Servo Ventilation and with Tear-Off FC for Buffer Tape</value>
-    <comment>FC_DESCR</comment>
-  </data>
-  <data name="FC452" xml:space="preserve">
-    <value>Motor Management with Inverter Control for pump with current control for water recirculation in two circuits</value>
     <comment>FC_DESCR</comment>
   </data>
   <data name="MAV_053" xml:space="preserve">
@@ -13030,14 +13018,6 @@ Note: If this mode is activated, upstream production may be suspended.</value>
     <value>Motor Management with Inverter Control with Current Control of Sump Pump with Three Level Rod</value>
     <comment>FC_DESCR</comment>
   </data>
-  <data name="FC462" xml:space="preserve">
-    <value>Motor Management with Inverter Control with Pull FC, Motor Brake, Downstream Safety Devices, Reaction Arm and access gate protected by safety key</value>
-    <comment>FC_DESCR</comment>
-  </data>
-  <data name="FC463" xml:space="preserve">
-    <value>Motor Management with Inverter Control for Pump with Min Level, Downstream OK and Current Control, ON/OFF + Modulation for DECANTER Discharge to Treatment</value>
-    <comment>FC_DESCR</comment>
-  </data>
   <data name="MAV_064" xml:space="preserve">
     <value>Inverter Motor Management with 2-speed current control specific for superwash STIRRER</value>
     <comment>FC_DESCR</comment>
@@ -13056,10 +13036,6 @@ Note: If this mode is activated, upstream production may be suspended.</value>
   </data>
   <data name="MAV_071" xml:space="preserve">
     <value>Inverter-controlled motor management for multi-speed bag filter</value>
-    <comment>FC_DESCR</comment>
-  </data>
-  <data name="FC472" xml:space="preserve">
-    <value>Motor Management with DCE Inverter Control with safety key</value>
     <comment>FC_DESCR</comment>
   </data>
   <data name="MAV_075" xml:space="preserve">
@@ -13570,18 +13546,6 @@ Note: If this mode is activated, upstream production may be suspended.</value>
     <value>Logic for Unlocking the Safety Key for a Single Mill with Water from the PUMP and Downstream Auger</value>
     <comment>FC_DESCR</comment>
   </data>
-  <data name="FC619" xml:space="preserve">
-    <value>BUHLER / SORTEX Flake Sorter Management for Storage Area</value>
-    <comment>FC_DESCR</comment>
-  </data>
-  <data name="FC620" xml:space="preserve">
-    <value>UNISENSOR / POWERSORT Flake Sorter Management for Storage Area</value>
-    <comment>FC_DESCR</comment>
-  </data>
-  <data name="FC624" xml:space="preserve">
-    <value>SEA / CIMBRIA Flake Sorter Management for Storage Area</value>
-    <comment>FC_DESCR</comment>
-  </data>
   <data name="LEV_062" xml:space="preserve">
     <value>Analogue Level Management of PET Washing Mixer (Batch)</value>
     <comment>FC_DESCR</comment>
@@ -13796,6 +13760,26 @@ Note: If this mode is activated, upstream production may be suspended.</value>
   </data>
   <data name="MAV_298" xml:space="preserve">
     <value>Management of 1 motor with inverter control pump with current control for draining the collection tank (modulated on the setpoint level)</value>
+    <comment>FC_DESCR</comment>
+  </data>
+  <data name="MAF_031" xml:space="preserve">
+    <value>Direct Start Motor Management with Safety Limit Switch and Delay in Disconnection for Material OK + Local Enable Selector</value>
+    <comment>FC_DESCR</comment>
+  </data>
+  <data name="MAV_050" xml:space="preserve">
+    <value>Motor Management with Inverter Control with Safety FC + BIMANUAL Bypass</value>
+    <comment>FC_DESCR</comment>
+  </data>
+  <data name="MAV_062" xml:space="preserve">
+    <value>Motor Management with Inverter Control with Pull FC, Motor Brake, Downstream Safety Devices, Reaction Arm and access gate protected by safety key</value>
+    <comment>FC_DESCR</comment>
+  </data>
+  <data name="MAVR_063" xml:space="preserve">
+    <value>Motor Management with Inverter Control for Pump with Min Level, Downstream OK and Current Control, ON/OFF + Modulation for DECANTER Discharge to Treatment</value>
+    <comment>FC_DESCR</comment>
+  </data>
+  <data name="MAVR_072" xml:space="preserve">
+    <value>Motor Management with DCE Inverter Control with safety key</value>
     <comment>FC_DESCR</comment>
   </data>
 </root>
